adjust wizard to set all parameters in static setAll method